<resources>
    <string name="app_name">Scheduler</string>
    <string name="title_activity_add_course">AddCourse</string>
    <string name="action_settings">Settings</string>

    <string name="Test">test</string>
    <string name="CourseNameHint">ex. CSE 2221</string>
    <string name="CourseTitleHint">ex. Software I</string>
    <string name="CourseCreditHint">ex. 4 (Credit Hours)</string>
    <string name="CoursePrereqsHint">we will do this EVENTUALLY</string>
    <string name="AddCourseLabel">add course</string>
    <string name="CourseTermHint">ex. AU 19</string>

    <string name="WelcomeInfo">Welcome! Enter an Account Username OR 1st College Year</string>
    <string name="StartingTermHint">starting term, ex. AU 18</string>
    <string name="AccountNameHint">Account Name</string>
    <string name="StartLabel">Lets get started!</string>

    <string name="OrButton">one of</string>
    <string name="PrereqLabel">ex. CSE 1223</string>

    <string name="Autumn">AU</string>
    <string name="Spring">SP</string>

    <string name="AUClass">AU Class</string>
    <string name="SPClass">SP Class</string>

    <string name="AUCredit">AU Credit</string>
    <string name="SPCredit">SP Credit</string>
    <string name="title_activity_welcome_basic_info">WelcomeBasicInfo</string>

</resources>

